# Monkey-Typer

./: CMakeLists.txt
include/ui/: panels.hpp
src/: main.cpp
src/ui/: panels.cpp
